--- a/package.json
+++ b/package.json
@@ -4,27 +4,33 @@
   "description": "Clean architecture BS",
   "type": "module",
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/node": "^16.11.10",
     "fix-esm-import-path": "^1.5.0",
     "resolve-tspaths": "^0.8.17",
     "ts-node": "10.9.1",
-    "tsx": "^4.7.0",
+    "tsconfig-paths": "^4.2.0",
+    "tsx": "^4.7.1",
     "typescript": "4.5.2"
   },
   "dependencies": {
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "express-list-endpoints": "^6.0.0",
     "pg": "^8.4.0",
+    "pino": "^8.18.0",
+    "pino-pretty": "^10.3.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "0.3.20"
   },
   "scripts": {
-    "dev": "node --watch --experimental-specifier-resolution=node --loader ts-node/esm src/app.ts",
-    "generate-migrations": "typeorm-ts-node-esm migration:generate ./src/migrations/migration -d ./src/loaders/database.ts",
-    "migrate": "typeorm-ts-node-esm migration:run -d ./src/loaders/database.ts",
+    "dev": "node --watch --experimental-specifier-resolution=node --loader ./scripts/loader.js ./src/app.ts | pino-pretty",
+    "generate-migrations": "typeorm-ts-node-esm migration:generate ./src/infrastructure/migrations/migration -d ./src/infrastructure/database.config.ts",
+    "migrate": "typeorm-ts-node-esm migration:run -d ./src/infrastructure/database.config.ts",
     "build": "tsc --project .; resolve-tspaths; fix-esm-import-path dist",
     "start": "npm run migrate; cd dist; node ./app.js;"
   }
