feat: basic user dto and token flow

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^16.11.10",
     "fix-esm-import-path": "^1.5.0",
     "resolve-tspaths": "^0.8.17",
@@ -15,22 +16,27 @@
     "typescript": "4.5.2"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-list-endpoints": "^6.0.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.4.0",
     "pino": "^8.18.0",
     "pino-pretty": "^10.3.1",
     "reflect-metadata": "^0.1.13",
+    "tsoa": "^6.0.1",
     "typeorm": "0.3.20"
   },
   "scripts": {
     "dev": "node --watch --experimental-specifier-resolution=node --loader ./scripts/loader.js ./src/app.ts | pino-pretty",
-    "generate-migrations": "typeorm-ts-node-esm migration:generate ./src/infrastructure/migrations/migration -d ./src/infrastructure/database.config.ts",
-    "migrate": "typeorm-ts-node-esm migration:run -d ./src/infrastructure/database.config.ts",
+    "typeorm": "node --experimental-specifier-resolution=node --loader ./scripts/loader.js scripts/typeorm.custom-cli.ts ",
+    "generate-migrations": "npm run typeorm migration:generate -- ./src/infrastructure/migrations/migration -d ./src/infrastructure/database.config.ts",
+    "migrate": "npm run typeorm migration:run -- -d ./src/infrastructure/database.config.ts",
+    "generate-and-migrate": "npm run generate-migrations; npm run migrate",
     "build": "tsc --project .; resolve-tspaths; fix-esm-import-path dist",
     "start": "npm run migrate; cd dist; node ./app.js;"
   }
