--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "resolve-tspaths": "^0.8.17",
     "ts-node": "10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "tsx": "^4.7.1",
     "typescript": "4.5.2"
   },
   "dependencies": {
@@ -23,12 +22,14 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-list-endpoints": "^6.0.0",
+    "express-oas-generator": "^1.0.46",
+    "express-openapi-generator": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.4.0",
     "pino": "^8.18.0",
     "pino-pretty": "^10.3.1",
     "reflect-metadata": "^0.1.13",
-    "tsoa": "^6.0.1",
+    "swagger-autogen": "^2.23.7",
     "typeorm": "0.3.20"
   },
   "scripts": {
