--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Clean architecture BS",
   "type": "module",
   "devDependencies": {
+    "@swc-node/register": "1.6.8",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
@@ -15,6 +16,7 @@
     "typescript": "4.5.2"
   },
   "dependencies": {
+    "add": "^2.0.6",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -34,6 +36,7 @@
   },
   "scripts": {
     "dev": "node --watch --experimental-specifier-resolution=node --loader ./scripts/loader.js ./src/app.ts | pino-pretty",
+    "devv": "node --experimental-specifier-resolution=node  --import @swc-node/register/esm ./src/app.ts | pino-pretty",
     "typeorm": "node --experimental-specifier-resolution=node --loader ./scripts/loader.js scripts/typeorm.custom-cli.ts ",
     "generate-migrations": "npm run typeorm migration:generate -- ./src/infrastructure/migrations/migration -d ./src/infrastructure/database.config.ts",
     "migrate": "npm run typeorm migration:run -- -d ./src/infrastructure/database.config.ts",
